added nightly page

--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -928,6 +928,7 @@
 
             <button style="margin-left: auto" @click="switchDesign" class="material-icons">highlight</button>
             <button @click="showSettings" class="material-icons">settings_applications</button>
+            <button @click="window.location.replace('http://localhost:5000/localbrowser.html');" class="material-icons">archive</button>
             <button @click="refresh" class="material-icons refreshButton">autorenew</button>
         </nav>
 
